# CrossBuilder

./: .gitignore  CMakeLists.txt  CrossBuilder.sln  README.md  armhf.toolchain.cmake
.github/workflows/: dotnetcore.yml
CrossBuilder/: Browser.cs  Cacheable.cs  CrossBuilder.csproj  Dependency.cs  ElfReader.cs  Package.cs  Program.cs  Repository.cs  StringExtensions.cs  nlog.config
CrossBuilder/Deb/: Comparer.cs  DebPackageComparer.cs  DebVersionComparer.cs
CrossBuilder/Downloaders/: HttpRemoteDownloader.cs  IRemoteDownloader.cs
CrossBuilder/Properties/: launchSettings.json
CrossCapture/: CrossCapture.csproj  Program.cs  WinApi.cs  WinEnum.cs
CrossCapture.GUI/: CrossCapture.GUI.csproj  FileTreeNode.cs  Form1.Designer.cs  Form1.cs  ProcessCapture.cs  Program.cs  WinType.cs
CrossCapture.GUI/Manifests/: CrossCapture.GUI.embed.manifest
CrossCapture.GUI/Properties/: launchSettings.json
CrossCapture/Manifests/: CrossCapture.embed.manifest
CrossSender/: CrossSender.csproj  Program.cs
CrossSender/Properties/: launchSettings.json
DebHelper/: CustomExtractionMethods.cs  DebHelper.csproj  DebReader.cs  ReaderException.cs
DebHelper/Implementation/: Helpers.cs  InnerFile.cs
ELFSharp/: ELFSharp.csproj
ExampleCMakeProject/: CMakeLists.txt
ExampleCMakeProject/src/: main.cpp  test.cpp
FileCatcher/: FileCatcher.csproj  FileTreeNode.cs  Form1.Designer.cs  Form1.cs  ProcessCapture.cs  Program.cs  WinApi.cs  WinEnum.cs  WinType.cs
FileCatcher/Manifests/: FileCatcher.embed.manifest
FileCatcher/Properties/: launchSettings.json
